Completa parametros de Pivots (salida) con ATR, historico y numero de niveles
Agrega LONGITUD_ATR (periodo del ATR, igual al PivotsAlpaca de referencia
que uso 14), ANIOS_HISTORICO (cuanta vela D1 escanear, default 5 anios)
y NUMERO_PIVOTES (cuantos niveles de soporte/resistencia devolver por
lado). Restringe el timeframe a solo 1D por ahora. La distincion
fuerte/debil del algoritmo de referencia no necesita parametro propio:
es un mecanismo de respaldo automatico (fuerte = pivote del lado
correcto del precio actual, debil = relleno cuando faltan fuertes), no
una opcion que configure el usuario.